# ttb

./: .gitignore  Cargo.toml  meta.json
src/: download.rs  indexer.rs  main.rs  tatoeba.rs  utils.rs
src/cli/: build.rs  mod.rs  pull.rs  search.rs  stepper.rs
src/core/: constants.rs  download.rs  index.rs  indexer.rs  mod.rs  schema.rs  search.rs  tatoeba.rs  utils.rs
