[package]
name = "tatoeba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = "0.4.3"
clap = "4.0.29"
csv = "1.1.6"
indicatif = "0.17.2"
reqwest = "0.11.12"
serde = "1.0.148"
tantivy = "0.18.1"
tar = "0.4.38"
tempfile = "3.3.0"
tokio = {version = "1.21.2", features = ["full"]}
