[package]
name = "ttb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = "0.4.3"
cang-jie = "0.14.0"
clap = {version = "4.0.29", features = ["derive"]}
csv = "1.1.6"
indicatif = "0.17.2"
reqwest = {version="0.11.12", features = ["stream"]}
serde = "1.0.148"
tantivy = "0.18.1"
tar = "0.4.38"
tempfile = "3.3.0"
tokio = {version = "1.22.0", features = ["macros", "full"]}
lindera-tantivy = { version = "0.12.0", features = ["ipadic"] }
console = "0.15.2"
strum = { version = "0.24", features = ["derive"] }
lingua = { version = "1.4.0", default-features = false, features = ["chinese", "japanese", "korean", "english"] }
once_cell = "1.16.0"
tokio-stream = "0.1.11"
dirs = "4.0.0"
serde_json = "1.0.89"
rusqlite = { version = "0.29.0", features = ["bundled"] }
